--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <style>
     :root {
-      --primary: #9b8bff;
-      --primary-strong: #5c6bff;
-      --accent-pink: #ff7ac3;
-      --bg-deep: #050616;
-      --bg-top: #11152b;
-      --glass: rgba(10, 14, 32, 0.96);
-      --text-main: #f9fafb;
-      --text-sub: #cbd5f5;
-      --border-soft: rgba(148, 163, 255, 0.4);
+      --purple-top: #a855f7;
+      --purple-bottom: #ec4899;
+      --phone-bg: #f5f5f7;
+      --text-main: #0f172a;
+      --text-sub: #6b7280;
+      --accent: #6366f1;
     }
 
     * {
@@ -30,148 +27,140 @@
       justify-content: center;
       align-items: center;
       padding: 16px;
-      background:
-        radial-gradient(circle at top, #1f2937 0, transparent 55%),
-        radial-gradient(circle at bottom, #020617 0, #020617 65%);
-      color: var(--text-main);
+      background: linear-gradient(180deg, var(--purple-top), var(--purple-bottom));
+      color: #ffffff;
     }
 
-    .app {
+    .frame {
       width: 100%;
       max-width: 520px;
-      border-radius: 24px;
-      border: 1px solid var(--border-soft);
-      background:
-        radial-gradient(circle at top left, rgba(148, 163, 255, 0.16), transparent 60%),
-        radial-gradient(circle at bottom right, rgba(94, 234, 212, 0.08), transparent 65%),
-        var(--glass);
+      border-radius: 28px;
+      background: rgba(15, 23, 42, 0.2);
       box-shadow:
-        0 24px 60px rgba(15, 23, 42, 0.9),
-        0 0 0 1px rgba(15, 23, 42, 0.9);
-      padding: 20px 18px 24px;
+        0 20px 60px rgba(15, 23, 42, 0.7),
+        0 0 0 1px rgba(148, 163, 255, 0.35);
+      padding: 18px 18px 22px;
     }
 
-    .header {
-      margin-bottom: 18px;
-    }
-
-    .title-row {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 10px;
-    }
-
-    .title-main {
-      font-size: 20px;
-      font-weight: 700;
-      letter-spacing: -0.03em;
-    }
-
-    .title-main span {
-      color: var(--primary);
-    }
-
-    .badge {
-      padding: 4px 10px;
-      font-size: 11px;
-      border-radius: 999px;
-      border: 1px solid rgba(148, 163, 255, 0.5);
-      background: rgba(15, 23, 42, 0.9);
-      color: var(--text-sub);
-      white-space: nowrap;
-    }
-
-    .subtitle {
-      margin-top: 6px;
-      font-size: 12px;
-      color: var(--text-sub);
-      line-height: 1.5;
-    }
-
-    .card {
-      border-radius: 20px;
-      border: 1px solid rgba(148, 163, 255, 0.35);
-      background: radial-gradient(circle at top, rgba(148, 163, 255, 0.12), rgba(15, 23, 42, 0.98));
-      padding: 14px 14px 16px;
+    .header-text {
+      text-align: center;
       margin-bottom: 14px;
     }
 
-    .section-title {
-      font-size: 13px;
-      font-weight: 600;
-      margin-bottom: 6px;
-    }
-
-    .section-sub {
-      font-size: 12px;
-      color: var(--text-sub);
-      margin-bottom: 10px;
-      line-height: 1.5;
-    }
-
-    .upload-box {
-      border-radius: 16px;
-      border: 1px dashed rgba(148, 163, 255, 0.7);
-      background: rgba(15, 23, 42, 0.9);
-      padding: 16px 12px;
-      text-align: center;
-      cursor: pointer;
-      transition: border-color 0.2s, background 0.2s, transform 0.08s;
-    }
-
-    .upload-box:hover {
-      border-color: var(--primary-strong);
-      background: rgba(15, 23, 42, 0.98);
-      transform: translateY(-1px);
-    }
-
-    .upload-icon {
-      font-size: 30px;
+    .header-text h1 {
+      font-size: 20px;
+      font-weight: 800;
+      letter-spacing: -0.04em;
       margin-bottom: 4px;
     }
 
-    .upload-main {
-      font-size: 13px;
-      font-weight: 600;
+    .header-text p {
+      font-size: 12px;
+      opacity: 0.9;
+      line-height: 1.4;
     }
 
-    .upload-sub {
+    /* “폰” 카드 */
+    .phone-wrap {
+      margin: 10px auto 16px;
+      max-width: 360px;
+      border-radius: 34px;
+      padding: 10px 10px 12px;
+      background: linear-gradient(145deg, rgba(255,255,255,0.9), rgba(209,213,219,0.9));
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.4);
+    }
+
+    .phone-inner {
+      border-radius: 26px;
+      background: var(--phone-bg);
+      padding: 10px 10px 14px;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .phone-top-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-bottom: 8px;
+      padding: 0 4px;
+    }
+
+    .phone-chip {
+      padding: 4px 10px;
+      border-radius: 999px;
+      border: 1px solid #e5e7eb;
+      font-size: 11px;
+      background: #ffffff;
+      color: var(--text-sub);
+    }
+
+    .upload-hint {
       font-size: 11px;
       color: var(--text-sub);
-      margin-top: 3px;
     }
 
-    #photoInput {
+    .phone-main-img-wrap {
+      border-radius: 22px;
+      overflow: hidden;
+      background: #e5e7eb;
+      aspect-ratio: 3 / 4;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .upload-placeholder {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      gap: 6px;
+      color: var(--text-sub);
+      font-size: 12px;
+      text-align: center;
+      padding: 0 16px;
+    }
+
+    .upload-circle {
+      width: 46px;
+      height: 46px;
+      border-radius: 999px;
+      border: 2px dashed #d1d5db;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      font-size: 22px;
+      background: #f9fafb;
+    }
+
+    #previewImage {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
       display: none;
     }
 
-    .thumb-wrap {
-      margin-top: 10px;
-      display: flex;
-      justify-content: center;
-    }
-
-    #thumbPreview {
-      max-width: 190px;
-      max-height: 190px;
-      border-radius: 14px;
-      border: 1px solid rgba(148, 163, 255, 0.55);
-      object-fit: cover;
-      box-shadow: 0 12px 30px rgba(15, 23, 42, 0.9);
+    .guide-text {
+      margin-top: 6px;
+      font-size: 11px;
+      color: var(--text-sub);
+      text-align: center;
     }
 
     .primary-btn {
       width: 100%;
-      margin-top: 12px;
+      margin-top: 14px;
       padding: 13px;
       border-radius: 999px;
       border: none;
       font-size: 14px;
       font-weight: 600;
       color: #fff;
-      background: linear-gradient(135deg, var(--accent-pink), var(--primary-strong));
-      box-shadow: 0 16px 40px rgba(79, 70, 229, 0.9);
+      background: linear-gradient(135deg, #f97316, #6366f1);
+      box-shadow: 0 16px 40px rgba(15, 23, 42, 0.9);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -189,144 +178,90 @@
 
     .primary-btn:not(:disabled):active {
       transform: translateY(1px);
-      box-shadow: 0 8px 24px rgba(79, 70, 229, 0.6);
+      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.7);
       filter: brightness(0.96);
     }
 
-    .status {
-      margin-top: 6px;
-      font-size: 11px;
-      color: var(--text-sub);
-      min-height: 14px;
-    }
-
-    .result-card {
-      border-radius: 20px;
-      border: 1px solid rgba(148, 163, 255, 0.35);
-      background: radial-gradient(circle at top, rgba(23, 37, 84, 0.8), rgba(15, 23, 42, 0.98));
-      padding: 12px;
-      margin-top: 14px;
-    }
-
-    .result-title {
-      font-size: 13px;
-      font-weight: 600;
-      margin-bottom: 6px;
-    }
-
-    .result-grid {
-      display: grid;
-      grid-template-columns: repeat(3, minmax(0, 1fr));
-      gap: 8px;
-    }
-
-    @media (max-width: 420px) {
-      .result-grid {
-        grid-template-columns: repeat(2, minmax(0, 1fr));
-      }
-    }
-
-    .result-item {
-      border-radius: 14px;
-      border: 1px solid rgba(148, 163, 255, 0.4);
-      background: rgba(15, 23, 42, 0.95);
-      padding: 4px;
-      display: flex;
-      flex-direction: column;
-      gap: 4px;
-      align-items: center;
-    }
-
-    .result-img {
-      width: 100%;
-      aspect-ratio: 3 / 4;
-      border-radius: 10px;
-      object-fit: cover;
-    }
-
-    .result-label {
-      font-size: 11px;
-      color: var(--text-sub);
+    .note {
+      margin-top: 8px;
+      font-size: 10px;
+      opacity: 0.9;
+      line-height: 1.4;
       text-align: center;
     }
 
-    .note {
-      margin-top: 10px;
-      font-size: 10px;
-      color: var(--text-sub);
-      line-height: 1.5;
-      text-align: left;
+    #photoInput {
+      display: none;
+    }
+
+    @media (max-width: 400px) {
+      .frame {
+        padding: 16px 14px 18px;
+      }
+
+      .phone-wrap {
+        max-width: 340px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="app">
-    <!-- 헤더 -->
-    <div class="header">
-      <div class="title-row">
-        <div class="title-main">AI 헤어 <span>스타일 체험</span></div>
-        <div class="badge">베타</div>
-      </div>
-      <p class="subtitle">
-        사진 한 장만 올리면, AI가 3가지 스타일로 미리 보여드립니다.
-      </p>
+  <div class="frame">
+    <div class="header-text">
+      <h1>AI 헤어 스타일 체험</h1>
+      <p>셀카 한 장으로 나에게 어울리는 헤어스타일 3가지를 미리 확인해 보세요.</p>
     </div>
 
-    <!-- 1. 사진 선택 -->
-    <div class="card">
-      <div class="section-title">1. 사진 업로드</div>
-      <p class="section-sub">
-        앞모습이 잘 나온 셀카를 촬영하거나, 갤러리에서 불러와 주세요.
-      </p>
+    <!-- 휴대폰 모양 업로드 박스 -->
+    <div class="phone-wrap" id="uploadArea">
+      <div class="phone-inner">
+        <div class="phone-top-bar">
+          <div style="width:24px;"></div>
+          <div class="phone-chip">사진 업로드 / 촬영하기</div>
+          <div style="font-size: 11px; color: var(--text-sub);">AI 프리뷰</div>
+        </div>
 
-      <div id="uploadBox" class="upload-box">
-        <div class="upload-icon">📷</div>
-        <div class="upload-main">사진 업로드 / 촬영하기</div>
-        <div class="upload-sub">눌러서 카메라 또는 갤러리를 열 수 있습니다.</div>
-      </div>
-      <input type="file" id="photoInput" accept="image/*" />
-
-      <div class="thumb-wrap" id="thumbWrap" style="display:none;">
-        <img id="thumbPreview" alt="사진 미리보기" />
+        <div class="phone-main-img-wrap">
+          <div id="placeholder" class="upload-placeholder">
+            <div class="upload-circle">📷</div>
+            <div>정면에 가까운 얼굴 사진을 업로드하거나<br />카메라로 촬영해 주세요.</div>
+          </div>
+          <img id="previewImage" alt="업로드한 사진 미리보기" />
+        </div>
       </div>
     </div>
 
-    <!-- 실행 버튼 -->
-    <button id="generateBtn" class="primary-btn" disabled>
-      <span id="btnLabel">AI 스타일 3가지 보기</span>
+    <input id="photoInput" type="file" accept="image/*" />
+
+    <p class="guide-text">
+      * 얼굴 전체가 보이고 정면에 가까운 사진일수록 더 자연스럽게 보입니다.
+    </p>
+
+    <button id="goResultBtn" class="primary-btn" disabled>
+      AI 헤어스타일 3가지 보기
     </button>
-    <div id="status" class="status"></div>
-
-    <!-- 결과 영역 -->
-    <div class="result-card" id="resultCard" style="display:none;">
-      <div class="result-title">2. 스타일 미리보기</div>
-      <div class="result-grid" id="resultGrid"></div>
-    </div>
 
     <p class="note">
-      * 현재는 테스트 단계로, 업로드한 사진을 그대로 3개 스타일 슬롯에 표시합니다.<br />
-      * 나중에 실제 AI 헤어 변환 모델이 연결되면, 각 스타일마다 머리 모양이 다르게 바뀝니다.
+      지금은 테스트 단계로, 같은 사진이 스타일 3종에 표시됩니다.<br />
+      나중에 실제 AI 헤어 변환 모델이 연결되면 스타일마다 머리 모양과 컬러가 달라집니다.
     </p>
   </div>
 
   <script>
-    const uploadBox = document.getElementById("uploadBox");
+    const uploadArea = document.getElementById("uploadArea");
     const photoInput = document.getElementById("photoInput");
-    const thumbWrap = document.getElementById("thumbWrap");
-    const thumbPreview = document.getElementById("thumbPreview");
-    const generateBtn = document.getElementById("generateBtn");
-    const btnLabel = document.getElementById("btnLabel");
-    const status = document.getElementById("status");
-    const resultCard = document.getElementById("resultCard");
-    const resultGrid = document.getElementById("resultGrid");
+    const previewImage = document.getElementById("previewImage");
+    const placeholder = document.getElementById("placeholder");
+    const goResultBtn = document.getElementById("goResultBtn");
 
     let imageBase64 = null;
 
-    // 사진 업로드
-    uploadBox.addEventListener("click", () => {
+    // 업로드 영역 클릭 → 파일 선택 열기
+    uploadArea.addEventListener("click", () => {
       photoInput.click();
     });
 
+    // 파일 선택 시 미리보기 + base64 저장
     photoInput.addEventListener("change", (e) => {
       const file = e.target.files[0];
       if (!file) return;
@@ -334,65 +269,26 @@
       const reader = new FileReader();
       reader.onload = (event) => {
         imageBase64 = event.target.result;
-        thumbPreview.src = imageBase64;
-        thumbWrap.style.display = "flex";
-        generateBtn.disabled = false;
-        status.textContent = "사진이 준비되었습니다. AI 스타일을 생성해 보세요.";
+        previewImage.src = imageBase64;
+        previewImage.style.display = "block";
+        placeholder.style.display = "none";
+        goResultBtn.disabled = false;
       };
       reader.readAsDataURL(file);
     });
 
-    // AI 스타일 생성
-    generateBtn.addEventListener("click", async () => {
+    // 버튼 → 로컬스토리지에 저장 후 결과 페이지로 이동
+    goResultBtn.addEventListener("click", () => {
       if (!imageBase64) {
         alert("먼저 사진을 업로드해 주세요.");
         return;
       }
 
-      generateBtn.disabled = true;
-      btnLabel.textContent = "AI가 스타일 생성 중...";
-      status.textContent = "잠시만 기다려 주세요.";
+      // 결과페이지에서 둘 다 대응할 수 있게 두 키 모두 저장
+      localStorage.setItem("hair_image_base64", imageBase64);
+      localStorage.setItem("image_base64", imageBase64);
 
-      try {
-        const res = await fetch("/api/hair-preview", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({
-            image_base64: imageBase64,
-            gender: "auto",     // 기본 정보 안 받으므로 더미 값
-            base_style: "auto"  // 나중에 필요하면 서버에서 활용 가능
-          })
-        });
-
-        if (!res.ok) throw new Error("서버 응답 오류");
-
-        const data = await res.json();
-        if (!data.success || !data.styles) {
-          throw new Error("AI 결과 형식이 올바르지 않습니다.");
-        }
-
-        // 결과 렌더링
-        resultGrid.innerHTML = "";
-        data.styles.forEach((item, idx) => {
-          const div = document.createElement("div");
-          div.className = "result-item";
-          div.innerHTML = `
-            <img class="result-img" src="${item.image}" alt="스타일 ${idx + 1}" />
-            <div class="result-label">${item.name}</div>
-          `;
-          resultGrid.appendChild(div);
-        });
-
-        resultCard.style.display = "block";
-        status.textContent = "테스트 결과가 준비되었습니다. (현재는 같은 사진이 3번 표시됩니다.)";
-      } catch (err) {
-        console.error(err);
-        status.textContent = "오류가 발생했습니다. 잠시 후 다시 시도해 주세요.";
-        alert("AI 스타일 생성 중 오류가 발생했습니다.");
-      } finally {
-        generateBtn.disabled = false;
-        btnLabel.textContent = "AI 스타일 3가지 보기";
-      }
+      window.location.href = "result.html";
     });
   </script>
 </body>
