--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,9 @@
   <style>
     :root {
       --purple-top: #a855f7;
-      --purple-bottom: #ec4899;
-      --card-bg: rgba(255, 255, 255, 0.96);
+      --purple-mid: #ec4899;
+      --purple-bottom: #f97316;
+      --card-bg: rgba(15, 23, 42, 0.95);
       --phone-bg: #f5f5f7;
       --text-main: #0f172a;
       --text-sub: #6b7280;
@@ -27,29 +28,31 @@
       justify-content: center;
       align-items: center;
       padding: 16px;
-      background: linear-gradient(180deg, var(--purple-top), var(--purple-bottom));
+      background:
+        radial-gradient(circle at top left, rgba(255,255,255,0.18), transparent 55%),
+        linear-gradient(180deg, var(--purple-top), var(--purple-mid), var(--purple-bottom));
     }
 
     .frame {
       width: 100%;
       max-width: 520px;
       border-radius: 32px;
-      background: linear-gradient(145deg,
-        rgba(255, 255, 255, 0.2),
-        rgba(15, 23, 42, 0.35));
-      padding: 18px 16px 20px;
+      padding: 2px;
+      background: linear-gradient(135deg,
+        rgba(255,255,255,0.75),
+        rgba(148,163,255,0.4),
+        rgba(15,23,42,0.6));
       box-shadow:
-        0 20px 60px rgba(15, 23, 42, 0.7),
-        0 0 0 1px rgba(148, 163, 255, 0.3);
-      color: #f9fafb;
+        0 22px 70px rgba(15, 23, 42, 0.8);
     }
 
     .inner {
-      border-radius: 26px;
+      border-radius: 30px;
       background: radial-gradient(circle at top,
         rgba(255, 255, 255, 0.06),
-        rgba(15, 23, 42, 0.9));
+        rgba(15, 23, 42, 0.96));
       padding: 18px 14px 18px;
+      color: #f9fafb;
     }
 
     .header-text {
@@ -76,9 +79,11 @@
       max-width: 360px;
       border-radius: 36px;
       padding: 10px 10px 12px;
-      background: var(--card-bg);
+      background: rgba(255,255,255,0.98);
+      border: 1px solid rgba(255,255,255,0.95);
       box-shadow:
-        0 18px 40px rgba(15, 23, 42, 0.45);
+        0 20px 40px rgba(15, 23, 42, 0.55),
+        0 0 0 1px rgba(148,163,255,0.25);
     }
 
     .phone-inner {
@@ -98,12 +103,13 @@
     }
 
     .phone-chip-left {
-      padding: 4px 12px;
+      padding: 4px 14px;
       border-radius: 999px;
       border: 1px solid #e5e7eb;
       font-size: 11px;
       background: #ffffff;
       color: var(--text-sub);
+      box-shadow: 0 4px 10px rgba(148,163,184,0.5);
     }
 
     .phone-chip-right {
@@ -136,8 +142,8 @@
     }
 
     .upload-circle {
-      width: 50px;
-      height: 50px;
+      width: 52px;
+      height: 52px;
       border-radius: 999px;
       border: 2px dashed #d4d4d8;
       display: flex;
@@ -157,7 +163,7 @@
     .guide-text {
       margin-top: 6px;
       font-size: 11px;
-      color: rgba(209, 213, 219, 0.95);
+      color: rgba(209, 213, 219, 0.98);
       text-align: center;
     }
 
@@ -170,8 +176,9 @@
       font-size: 14px;
       font-weight: 600;
       color: #fff;
-      background: linear-gradient(135deg, #fb923c, #6366f1);
-      box-shadow: 0 16px 40px rgba(15, 23, 42, 0.9);
+      background: linear-gradient(135deg, #fb923c, #f97316, #6366f1);
+      box-shadow:
+        0 18px 44px rgba(15, 23, 42, 0.95);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -189,7 +196,7 @@
 
     .primary-btn:not(:disabled):active {
       transform: translateY(1px);
-      box-shadow: 0 8px 24px rgba(15, 23, 42, 0.7);
+      box-shadow: 0 10px 26px rgba(15, 23, 42, 0.8);
       filter: brightness(0.96);
     }
 
@@ -208,7 +215,7 @@
 
     @media (max-width: 400px) {
       .frame {
-        padding: 14px 12px 16px;
+        padding: 2px;
       }
 
       .inner {
